<!-- Page de connexion -->
<!--
 Layout de la page de connexion, qui permet de saisir un nom d'utilisateur (e-mail) et un mot de passe
 utilisateur.

 Deux boutons, l'un pour se connecter, et le second pour créer un compte
 utilisateur.

 Le tout centré en vertical (fonction orientation et gravity), et en ayant
 une marge à chacun des bords de l'écran du téléphone (fonction padding).

 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <!-- Champ de saisi de l'adresse E-mail -->
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email" />

    <!-- Champ de saisi du mot de passe -->
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <!-- Bouton de connexion -->
    <Button
        android:id="@+id/connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect" />

    <!-- Bouton de création de compte -->
    <Button
        android:id="@+id/create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account" />
</LinearLayout>